# Aqueeq-mu-predictor-algorithm

./: README.md  main.py  pyproject.toml  setup.py  summery.org  test_package.py
examples/: base_case.py  golden_ratio.py
mu_predictor/: __init__.py  cli.py  main.py  utils.py  visual.py
